--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,7 @@
-/* hero section  */
-
+/* Home page css  */
 .hero-banner {
   min-height: calc(100vh - 96px);
-  padding: calc(50px + (88 - 50) * ((100vw - 300px) / (1920 - 300))) 0 calc(60px + (100 - 60) * ((100vw - 300px) / (1920 - 300)));
+  padding: calc(35px + (88 - 35) * ((100vw - 300px) / (1920 - 300))) 0 calc(60px + (100 - 60) * ((100vw - 300px) / (1920 - 300)));
   border-radius: 0 0 calc(40px + (100 - 40) * ((100vw - 300px) / (1920 - 300))) calc(40px + (100 - 40) * ((100vw - 300px) / (1920 - 300)));
   display: flex;
   align-items: center;
@@ -10,6 +9,21 @@
   position: relative;
   z-index: 1;
   overflow: hidden;
+}
+
+.hero-banner .container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.hero-banner .container >div{
+  width: 50%;
+}
+
+.hero-banner .hero-img{
+  display: flex;
+  gap: 15px;
 }
 
 .hero-banner p {
@@ -23,6 +37,8 @@
 
 .hero-banner .hero-img img:nth-child(1) {
   margin-left: -56px;
+  z-index: 2;
+  position: relative;
 }
 
 .hero-banner .hero-img img:nth-child(2) {
@@ -41,10 +57,16 @@
   margin-top: -110px;
 }
 
+.about-section .container {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .about-section h2 {
   color: var(--white-color);
-  width: 60%;
+  width: 58%;
   margin: 0 auto 15px;
+  text-align: center;
 }
 
 .about-section p {
@@ -71,11 +93,26 @@
   font-weight: 400;
 }
 
+.about-section .about-card-row{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-right: -20px;
+  margin-left: -20px;
+}
+
+.about-section .about-card-row .about-card{
+  width: 25%;
+  padding: 0 20px;
+  margin-top: 30px;
+}
+
 .about-section .img-box img {
   border-radius: 14px;
-  max-height: 420px;
   margin: 0 auto 20px;
   object-fit: cover;
+  width: 100%;
+  height: 420px;
 }
 
 .about-section .img-box+.h5 {
@@ -84,190 +121,8 @@
   margin-bottom: 0;
 }
 
-.transformation-section {
-  padding: calc(60px + (165 - 60) * ((100vw - 300px) / (1920 - 300))) 0 calc(60px + (105 - 60) * ((100vw - 300px) / (1920 - 300)));
-}
-
-.transformation-section h2 {
-  margin-bottom: 50px;
-}
-
-.transformation-section h2 span {
-  display: block;
-}
-
-.transformation-section h2+p {
-  margin-bottom: 40px;
-}
-
-
-.care-list-parent {
-  position: relative;
-  width: 85%;
-}
-
-.care-list-parent::after {
-  content: "";
-  position: absolute;
-  width: calc(100% - 50px);
-  height: 200px;
-  left: 70px;
-  bottom: -50px;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
-}
-
-.care-list {
-  max-height: 380px;
-  overflow-y: scroll;
-  padding-left: 70px;
-  position: sticky;
-  top: 0;
-}
-
-.care-list::-webkit-scrollbar {
-  width: 4px;
-}
-
-.care-list::-webkit-scrollbar-track {
-  background: #DFDFDF;
-}
-
-.care-list::-webkit-scrollbar-thumb {
-  background-color: var(--black-color);
-  width: 3px;
-  border-radius: 10px;
-  border: 3px solid transparent;
-}
-
-.care-list::-webkit-scrollbar-thumb:hover {
-  background: var(--black-color);
-}
-
-.care-list {
-  direction: rtl;
-  /* Flip direction for scrollbar */
-  text-align: left;
-}
-
-.care-list>* {
-  direction: ltr;
-  /* Reset direction for text and content */
-}
-
-.care-list li {
-  margin-bottom: 38px;
-}
-
-.care-list li .care-title {
-  font-weight: 600;
-}
-
-.care-list li p {
-  margin-bottom: 0;
-}
-
-.transformation-section .chiropractic-care-img img {
-  border-radius: 200px;
-  width: 420px;
-}
-
-.common-problems-section {
-  padding: calc(60px + (105 - 60) * ((100vw - 300px) / (1920 - 300))) 0 calc(60px + (85 - 60) * ((100vw - 300px) / (1920 - 300)));
-  background: url("../images/common-problems-bg.jpg") no-repeat;
-  background-size: cover;
-}
-
-.common-problems-section .text-column {
-  border-radius: 20px;
-  background-color: var(--white-color);
-}
-
-.common-problems-section .text-column h3 {
-  padding: 35px 30px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  margin-bottom: 0;
-}
-
-.common-problems-section .text-column ul {
-  padding: 35px 28px 28px;
-}
-
-.common-problems-section .text-column ul li {
-  font-weight: 600;
-  margin-bottom: 16px;
-  display: flex;
-  align-items: center;
-  font-size: calc(17px + (22 - 17) * ((100vw - 300px) / (1920 - 300)));
-}
-
-.common-problems-section .text-column ul li span {
-  display: inline-block;
-  margin-right: 12px;
-}
-
-.get-started-section {
-  padding: calc(60px + (94 - 60) * ((100vw - 300px) / (1920 - 300))) 0 calc(60px + (98 - 60) * ((100vw - 300px) / (1920 - 300)));
-}
-
-.get-started-section h2 span {
-  display: block;
-  margin-bottom: 16px;
-}
-
-.get-started-section h2+p {
-  line-height: 3;
-  margin-bottom: 32px;
-}
-
-.get-started-section h2+p a {
-  font-weight: 600;
-  border-bottom: 1px solid currentColor;
-  color: var(--black-color);
-}
-
-.get-started-section h2+p a:hover {
-  color: var(--primary-color);
-}
-
-.get-started-section .challenges-card {
-  padding: 40px 50px;
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
-  border-radius: 20px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition: 0.3s all ease-in;
-}
-
-.get-started-section .challenges-card:hover {
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
-}
-
-.get-started-section .challenges-card span[class^="icon-"] {
-  font-size: 65px;
-  display: block;
-  margin-bottom: 28px;
-}
-
-.get-started-section .challenges-card:hover span[class^="icon-"]::before {
-  color: var(--primary-color);
-}
-
-.get-started-section .challenges-card .h5 {
-  font-weight: 700;
-  line-height: 1.33;
-  width: 75%;
-  margin-bottom: 20px;
-}
-
-.get-started-section .challenges-card p {
-  margin-bottom: 0;
-}
-
-@media (max-width:1599px) {
+/* Responsive CSS */
+@media (max-width:1599.5px) {
   .about-section h2 {
     width: 56%;
   }
@@ -277,7 +132,7 @@
   }
 }
 
-@media (max-width:1499px) {
+@media (max-width:1499.5px) {
   .about-section h2 {
     width: 100%;
     text-align: center;
@@ -288,65 +143,64 @@
   }
 }
 
-@media (max-width:1399px) {
-  .get-started-section .challenges-card .h5 {
-    width: 90%;
-  }
-
-  .common-problems-section .text-column h3 {
-    padding: 25px 20px;
-  }
-
-  .common-problems-section .text-column ul {
-    padding: 25px 22px 22px;
-  }
-
-  .get-started-section .challenges-card {
-    padding: 30px 35px;
-  }
-
-  .transformation-section h2 {
-    margin-bottom: 35px;
-  }
-
-  .transformation-section h2+p {
-    margin-bottom: 30px;
-  }
-}
-
-@media (max-width:1199px) {
-  .hero-banner .hero-content {
-    margin-bottom: 40px;
-  }
-
-  .care-list li {
-    margin-bottom: 28px;
-  }
-
-  .transformation-section .chiropractic-care-img img {
-    border-radius: 150px;
-    width: 320px;
-  }
-
-  .get-started-section h2+p {
-    margin-bottom: 25px;
+@media (max-width:1399.5px) {
+  .hero-banner .hero-img img {
+    width: 40%;
   }
 
   .about-section .img-box img {
-    border-radius: 12px;
-    max-height: 350px;
+    height: 300px;
+}
+}
+
+
+@media (max-width:1199.5px) {
+
+  .hero-banner .container >div {
+      width: 100%;
   }
 
   .hero-banner .hero-img {
     display: none !important;
   }
+
+  .about-section .img-box+.h5{
+    font-size: 18px;
+    max-width: 100%;
+    line-height: 1.4;
+  }
+
+  .about-section .img-box img {
+    border-radius: 12px;
+  }
+
 }
 
-@media (max-width: 991px) {
+@media (max-width: 991.5px) {
 
 
   .hero-banner .hero-content {
     margin-bottom: 0;
+  }
+
+  .about-section .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .about-section .about-card-row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+  .about-section .about-card-row .about-card{
+    width: 50%;
+    padding: 0 15px;
+  }
+
+  .about-section .img-box img{
+    border-radius: 12px;
+    height: 350px;
   }
 
   .about-section h2 span {
@@ -360,41 +214,13 @@
   .about-section .h4 {
     margin-bottom: 25px;
   }
-
-  .transformation-section h2 {
-    margin-bottom: 25px;
-  }
-
-  .transformation-section h2 span {
-    display: inline-block;
-  }
-
-  .care-list-parent::after {
-    height: 150px;
-    bottom: -30px;
-  }
-
-  .transformation-section .chiropractic-care-img {
-    margin-top: 50px;
-  }
-
-  .get-started-section .challenges-card {
-    padding: 20px 25px;
-    margin: 0 auto 40px;
-  }
-
-  .get-started-section .challenges-card span[class^="icon-"] {
-    font-size: 55px;
-    margin-bottom: 20px;
-  }
-
-  .transformation-section .chiropractic-care-img img {
-    border-radius: 130px;
-    width: 280px;
-  }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767.5px) {
+  .hero-banner .container >div{
+    width: 100%;
+  }
+
   .about-section {
     text-align: center;
   }
@@ -403,17 +229,12 @@
     max-width: 100%;
   }
 
-  .transformation-section {
-    padding-right: calc(var(--bs-gutter-x)* .5);
-    padding-left: calc(var(--bs-gutter-x)* .5);
+  .about-section .about-card-row .about-card{
+    width: 100%;
   }
 
-  .care-list {
-    max-height: 300px;
-    padding-left: 40px;
-  }
-
-  .care-list-parent::after {
-    left: 40px;
+  .about-section .img-box img {
+    height: 300px;
+    width: auto;
   }
 }
